# shr_core

./: .ansible-lint.yml  .clang-format  .gitignore  .yamllint.yml  Makefile  README.md  ddt_checker.py  dependency.repos  docker-compose.raspi.yml  test_esc.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-iso.yml  ros2-build-test.yaml  ros2-build-test.yml
ansible/: ansible.cfg  inventory.ini.example
ansible/playbooks/: README.md  setup_dev.yaml  setup_kit.yaml
ansible/roles/ros2/: README.md
ansible/roles/ros2/defaults/: main.yaml
ansible/roles/ros2/meta/: main.yaml
ansible/roles/ros2/tasks/: main.yaml
config/: robot_config.yaml
ddt_motor_control/: CMakeLists.txt  package.xml
ddt_motor_control/ddt_motor_control/: ddt_motor_controller_node.py  ddt_motor_controller_test_node.py  ddt_motor_scan_control_node.py  laser_to_pointcloud_node.py
ddt_motor_control/msg/: MotorStatus.msg
ddt_motor_control_cpp/: CMakeLists.txt  README.md  data_sheet.md  package.xml
ddt_motor_control_cpp/config/: ddt_motor_controller.yaml  ddt_motor_controller_demo.yaml
ddt_motor_control_cpp/include/ddt_motor_control_cpp/: ddt_motor_controller_component.hpp
ddt_motor_control_cpp/launch/: ddt_motor_controller.launch.xml  ddt_motor_controller_component.launch.xml
ddt_motor_control_cpp/src/: ddt_motor_controller_component.cpp  ddt_motor_controller_component_node.cpp  ddt_motor_controller_node.cpp
docker/: Dockerfile  Dockerfile.raspi  docker-compose.raspi.yml  entrypoint-raspi.sh
esc_motor_control/: CMakeLists.txt  README.md  package.xml
esc_motor_control/config/: esc_motor_control.yaml
esc_motor_control/include/esc_motor_control/: esc_motor_control_component.hpp
esc_motor_control/launch/: esc_motor_control.launch.py  esc_motor_control.launch.xml
esc_motor_control/scripts/: manual_joy_test.sh  run_joy_tests.sh  test_esc_motor.sh  test_joy_control.sh
esc_motor_control/src/: esc_motor_control_component.cpp  esc_motor_control_node.cpp
esc_motor_control/test/: test_joy_control.cpp
esc_motor_control_python/: README.md  package.xml  setup.cfg  setup.py
esc_motor_control_python/config/: esc_motor_control_python.yaml
esc_motor_control_python/esc_motor_control_python/: __init__.py  esc_motor_control_node.py  esc_motor_test_node.py
esc_motor_control_python/launch/: esc_motor_control_python.launch.py  esc_motor_control_python.launch.xml  esc_motor_test.launch.py
esc_motor_control_python/resource/: esc_motor_control_python
esc_motor_control_python/test/: test_esc_motor_control_node.py  test_esc_motor_test_node.py
joy_controller/: CMakeLists.txt  README.md  package.xml
joy_controller/config/: debug_params.yaml  joy_controller_params.yaml
joy_controller/include/joy_controller/: joy_controller_component.hpp
joy_controller/launch/: joy_controller.launch.py  joy_controller.launch.xml
joy_controller/src/: joy_controller_component.cpp  joy_controller_node.cpp
launcher/: CMakeLists.txt  README.md  ddt_motor_launch.xml  launch_shr.sh  navigation_launch.xml  package.xml  servo_system_launch.xml  shr_core_launch.xml  test_launch.xml
launcher/config/: lidar1_params.yaml  lidar2_params.yaml
launcher/launch/: ddt_motor.launch.xml  drive_component.launch.xml  lidar_driver.launch.xml  navigation.launch.xml  servo_system.launch.xml  shot_component.launch.xml  shr_core.launch.xml  test.launch.xml
motor_control_app/: CMakeLists.txt  package.xml
motor_control_app/config/: drive_component.yaml  shot_config.yaml
motor_control_app/include/motor_control_app/: drive_component.hpp  servo_control.hpp  shot_component.hpp
motor_control_app/launch/: drive_component.launch.py  drive_component_container.launch.py  individual_motor_control.launch.py  shot_component.launch.py  shot_with_joy.launch.py
motor_control_app/src/: drive_component.cpp  drive_component_node.cpp  individual_motor_app.cpp  shot_component.cpp  shot_component_node.cpp  simple_motor_app.cpp  simple_test_node.cpp  unified_motor_app.cpp  unified_motor_control_node.cpp
motor_control_lib/: CMakeLists.txt  README.md  package.xml
motor_control_lib/config/: servo_config.yaml
motor_control_lib/include/motor_control_lib/: base_motor_controller.hpp  ddt_motor_lib.hpp  differential_drive.hpp  motor_control_lib.hpp  motor_manager.hpp  servo_control.hpp
motor_control_lib/launch/: servo_control.launch.py
motor_control_lib/src/: ddt_motor_lib.cpp  differential_drive.cpp  motor_manager.cpp  servo_control.cpp  servo_control_node.cpp  servo_test_node.cpp
motor_control_lib_simple/: CMakeLists.txt  package.xml
motor_control_lib_simple/include/motor_control_lib_simple/: motor_factory.hpp
scripts/: apply-ansible-config.sh  build-iso.sh  docker-raspi.sh  prepare-base-system.sh
servo_control_ros2/: README.md  package.xml  setup.cfg  setup.py
servo_control_ros2/config/: servo_config.yaml
servo_control_ros2/launch/: servo_launch.py  servo_launch.xml
servo_control_ros2/resource/: servo_control_ros2_dummy
servo_control_ros2/servo_control_ros2/: __init__.py  servo_control_tester.py  servo_node.py  test_setpos_simple.py
servo_control_ros2/srv/: SetPosition.srv
servo_control_ros2/test/: test_servo_node.py  test_setpos.py
