<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ddt_motor_control_cpp</name>
    <version>0.0.1</version>
    <description>C++ component-based ROS2 node for DDT motor control</description>
    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>libserial-dev</depend>
    <depend>ddt_motor_control</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
