[metadata]
name = servo_control_ros2
version = 0.0.1
description = ROS2 package for controlling servo motors
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs

[options.entry_points]
console_scripts =
    servo_control_node = servo_control_ros2.servo_node:main

[options.package_data]
* = *.yaml, *.srv

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"